--- a/mybatis-test/spring-mybatis/pom.xml
+++ b/mybatis-test/spring-mybatis/pom.xml
@@ -13,6 +13,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>mybatis-test</groupId>
+            <artifactId>mybatis-plugin</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
         <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
             <version>4.1.7.RELEASE</version>
