--- a/mybatis-test/spring-mybatis/pom.xml
+++ b/mybatis-test/spring-mybatis/pom.xml
@@ -83,6 +83,12 @@
             <artifactId>asm</artifactId>
             <version>3.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     <!-- 构建设置 -->
     <build>
