--- a/code-test/pom.xml
+++ b/code-test/pom.xml
@@ -44,6 +44,13 @@
             <artifactId>kryo</artifactId>
             <version>2.24.0</version>
         </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>com.esotericsoftware</groupId>-->
+            <!--<artifactId>kryo</artifactId>-->
+            <!--<version>4.0.0</version>-->
+        <!--</dependency>-->
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
