--- a/code-test/pom.xml
+++ b/code-test/pom.xml
@@ -34,15 +34,29 @@
             <artifactId>curator-client</artifactId>
             <version>3.1.0</version>
         </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>org.apache.zookeeper</groupId>-->
+            <!--<artifactId>apache-zookeeper</artifactId>-->
+            <!--<version>3.4.6</version>-->
+        <!--</dependency>-->
+
         <dependency>
             <groupId>org.apache.zookeeper</groupId>
-            <artifactId>apache-zookeeper</artifactId>
-            <version>3.4.6</version>
+            <artifactId>zookeeper</artifactId>
+            <version>3.5.2-alpha</version>
         </dependency>
+
         <dependency>
             <groupId>com.esotericsoftware.kryo</groupId>
             <artifactId>kryo</artifactId>
             <version>2.24.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>4.2.3.RELEASE</version>
         </dependency>
 
         <!--<dependency>-->
