--- a/code-test/pom.xml
+++ b/code-test/pom.xml
@@ -20,6 +20,21 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>1.6.10</version>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.6.10</version>
+        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>io.netty</groupId>-->
+            <!--<artifactId>netty</artifactId>-->
+            <!--<version>3.7.0.Final</version>-->
+        <!--</dependency>-->
+        <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>apache-curator</artifactId>
             <version>3.2.0</version>
@@ -45,7 +60,7 @@
         <dependency>
             <groupId>org.apache.zookeeper</groupId>
             <artifactId>zookeeper</artifactId>
-            <version>3.5.2-alpha</version>
+            <version>3.4.8</version>
         </dependency>
 
         <dependency>
@@ -60,6 +75,21 @@
             <version>4.2.3.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>4.1.2.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.1.2.RELEASE</version>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>com.esotericsoftware</groupId>-->
             <!--<artifactId>kryo</artifactId>-->
@@ -71,6 +101,11 @@
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.5.Final</version>
         </dependency>
     </dependencies>
 </project>
